@@ -3,9 +3,9 @@
     "displayName": "Advanced Charcoal Kiln",
     "description": "A blueprint used on how to craft an advanced charcoal kiln at a workbench!"
   },
-  "Omegasis.Revitalize.Objects.Crafting.Blueprint.Workbench.Machines.CharcoalKilns.DeluxCharcoalKiln": {
-    "displayName": "Delux Charcoal Kiln",
-    "description": "A blueprint used on how to craft a delux charcoal kiln at a workbench!"
+  "Omegasis.Revitalize.Objects.Crafting.Blueprint.Workbench.Machines.CharcoalKilns.DeluxeCharcoalKiln": {
+    "displayName": "Deluxe Charcoal Kiln",
+    "description": "A blueprint used on how to craft a deluxe charcoal kiln at a workbench!"
   },
   "Omegasis.Revitalize.Objects.Crafting.Blueprint.Workbench.Machines.CharcoalKilns.SuperiorCharcoalKiln": {
     "displayName": "Superior Charcoal Kiln",
