@@ -43,7 +43,7 @@ namespace Omegasis.Revitalize.Framework.World.WorldUtilities.Shops
             ShopUtilities.AddToShopIfCraftingRecipeNotKnown(Menu, CraftingRecipeBooks.WorkbenchCraftingRecipies, WorkbenchRecipeIds.MagicalGeodeCrusher, objectManager.getItem(WorkbenchBlueprintIds.MagicalAdvancedGeodeCrusherBlueprint), shopConfig.magicalGeodeCrusherBlueprintPrice, 1, Game1.stats.GeodesCracked >= 1000 && PlayerUtilities.GetNumberOfGoldenWalnutsFound() >= 100);
 
             ShopUtilities.AddToShopIfCraftingRecipeNotKnown(Menu, CraftingRecipeBooks.WorkbenchCraftingRecipies, WorkbenchRecipeIds.AdvancedCharcoalKiln, objectManager.getItem(WorkbenchBlueprintIds.AdvancedCharcoalKiln, 1), shopConfig.advancedCharcoalKilnBlueprintPrice, 1, Game1.player.ForagingLevel >= 8);
-            ShopUtilities.AddToShopIfCraftingRecipeNotKnown(Menu, CraftingRecipeBooks.WorkbenchCraftingRecipies, WorkbenchRecipeIds.DeluxCharcoalKiln, objectManager.getItem(WorkbenchBlueprintIds.DeluxCharcoalKiln, 1), shopConfig.deluxCharcoalKilnBlueprintPrice, 1, Game1.player.ForagingLevel >= 8 && PlayerUtilities.GetNumberOfGoldenWalnutsFound()>=1);
+            ShopUtilities.AddToShopIfCraftingRecipeNotKnown(Menu, CraftingRecipeBooks.WorkbenchCraftingRecipies, WorkbenchRecipeIds.DeluxeCharcoalKiln, objectManager.getItem(WorkbenchBlueprintIds.DeluxeCharcoalKiln, 1), shopConfig.deluxCharcoalKilnBlueprintPrice, 1, Game1.player.ForagingLevel >= 8 && PlayerUtilities.GetNumberOfGoldenWalnutsFound()>=1);
             ShopUtilities.AddToShopIfCraftingRecipeNotKnown(Menu, CraftingRecipeBooks.WorkbenchCraftingRecipies, WorkbenchRecipeIds.SuperiorCharcoalKiln, objectManager.getItem(WorkbenchBlueprintIds.SuperiorCharcoalKiln, 1), shopConfig.superiorCharcoalKilnBlueprintPrice, 1, Game1.player.ForagingLevel >= 8 && PlayerUtilities.GetNumberOfGoldenWalnutsFound()>=100);
 
             ShopUtilities.AddToShopIfCraftingRecipeNotKnown(Menu, CraftingRecipeBooks.WorkbenchCraftingRecipies, WorkbenchRecipeIds.BurnerGenerator, objectManager.getItem(WorkbenchBlueprintIds.BurnerGenerator), shopConfig.burnerBatteryGeneratorBlueprintPrice);
